[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenlens"
version = "0.1.0"
description = "Local-first CLI for quota visibility across developer assistants"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "TokenLens maintainers" }
]
keywords = ["cli", "quota", "usage", "developer-tools", "terminal"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities",
]

[project.scripts]
tokenlens = "tokenlens:main"

[tool.setuptools]
py-modules = ["tokenlens"]
